<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".datosEstados">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button0"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e0"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button1"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e1"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button2"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e2"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button3"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e3"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button4"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e4"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button5"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e5"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button6"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e6"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button7"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e7"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button8"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e8"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button9"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e9"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button10"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e10"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button11"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e11"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button12"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e12"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button13"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e13"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button14"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e14"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button15"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e15"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button16"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e16"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button17"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e17"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button18"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e18"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button19"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e19"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button20"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e20"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button21"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e21"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button22"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e22"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button23"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e23"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button24"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e24"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button25"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e25"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button26"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e26"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button27"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e27"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button28"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e28"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button29"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e29"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button30"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e30"
                android:textAllCaps="false"
                android:textColor="#fff" />

            <Button
                android:id="@+id/button31"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/animaboton"
                android:text="@string/e31"
                android:textAllCaps="false"
                android:textColor="#fff" />

        </LinearLayout>

    </ScrollView>



    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scrollView2"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="450dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvEstado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/Estado"
                android:textColor="#fff"
                android:textSize="25dp"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/scrollView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvCapital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Capital"
                android:textColor="#fff"
                android:textSize="20dp"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/scrollView2"
                app:layout_constraintTop_toBottomOf="@+id/tvEstado" />

            <ImageView
                android:id="@+id/imageMapa"
                android:layout_width="370dp"
                android:layout_height="251dp"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/adView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/scrollView2"
                app:layout_constraintTop_toBottomOf="@+id/tvCapital"
                app:srcCompat="@drawable/mapamx" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                app:adSize="BANNER"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                app:adUnitId="@string/bannerPrueba"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/scrollView2"></com.google.android.gms.ads.AdView>


        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>